--- a/design.css
+++ b/design.css
@@ -1,6 +1,5 @@
-#div1
-{
-    width: 200px;
-    height: 200px;
-    background-color: black;
+#div1 {
+  width: 300px;
+  height: 300px;
+  background-color: black;
 }
