--- a/delay prompt/dp.css
+++ b/delay prompt/dp.css
@@ -13,7 +13,7 @@ h1 {
   width: 480px;
   height: 300px;
   background-image: url("pic/infotab.png");
-  visibility: hidden;
+  display: none;
 }
 
 div {
